# Task-Manager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
task_manager/: json_data_reader.py  mixins.py  settings.py  test.py  urls.py  views.py
task_manager/apps/labels/: views.py
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/statuses/: urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tasks/: models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py
task_manager/apps/users/: forms.py  tests.py  urls.py  views.py
task_manager/apps/users/migrations/: 0001_initial.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  index.html  navbar.html  user_auth.html
task_manager/templates/labels/: create.html  delete.html  main.html  update.html
task_manager/templates/statuses/: create.html  delete.html  main.html  update.html
task_manager/templates/tasks/: create.html  delete.html  main.html  task_detail.html  update.html
task_manager/templates/users/: create.html  delete.html  main.html  update.html
